--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./index.css">
     <script src="/dist/model.js" defer type="module"></script>
     <script src="/dist/view.js" defer type="module"></script>
+    <script src="/dist/controller.js" defer type="module"></script>
     <title>PolitikerSnake</title>
 </head>
 
