Implements circle snake body parts

--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,14 @@
 </head>
 
 <body>
+    <section class="panel">
+        <article class="score">Score: 0</article>
+    </section>
     <section class="gameboard">
 
     </section>
+
+    <button class="btn">ENDRE TIL VEST</button>
 </body>
 
 </html>
