Adds control buttons

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,16 @@
 
     </section>
 
-    <button class="btn">ENDRE TIL VEST</button>
+    <section class="buttons">
+        <div></div>
+        <button class="btn">&#11165</button>
+        <div></div>
+        <button class="btn">&#11164</button>
+        <div></div>
+        <button class="btn">&#11166</button>
+        <div></div>
+        <button class="btn">&#11167</button>
+    </section>
 </body>
 
 </html>
