Implements webpack and snake speed increasing

--- a/src/template.html
+++ b/src/template.html
@@ -7,7 +7,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1044614197357810"
      crossorigin="anonymous"></script>
     <title>PolitikerSnake</title>
-<script defer src="bundle2f2beaacd49c703fc8f1.js"></script></head>
+</head>
 
 <body>
     <section class="panel">
