Making the game more responsive

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1044614197357810"
      crossorigin="anonymous"></script>
-    <title>PolitikerSnake</title>
-<script defer src="bundle2f2beaacd49c703fc8f1.js"></script></head>
+    <title>Snake</title>
+<script defer src="bundle360eece55368340a48f1.js"></script></head>
 
 <body>
     <section class="panel">
