Color when clicking buttons

--- a/src/template.html
+++ b/src/template.html
@@ -19,13 +19,13 @@
 
     <section class="buttons">
         <div></div>
-        <button class="btn btn-up">&#11165</button>
+        <button class="btn btn-up">Up</button>
         <div></div>
-        <button class="btn btn-left">&#11164</button>
+        <button class="btn btn-left">Left</button>
         <div></div>
-        <button class="btn btn-right">&#11166</button>
+        <button class="btn btn-right">Right</button>
         <div></div>
-        <button class="btn btn-down">&#11167</button>
+        <button class="btn btn-down">Down</button>
     </section>
 </body>
 
