--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1044614197357810"
-     crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script>
     <title>Snake</title>
-<script defer src="bundle360eece55368340a48f1.js"></script></head>
+<script defer src="bundle12616c91c2d951e2d8b0.js"></script></head>
 
 <body>
     <section class="panel">
@@ -19,13 +19,13 @@
 
     <section class="buttons">
         <div></div>
-        <button class="btn btn-up">&#11165</button>
+        <button class="btn btn-up">Up</button>
         <div></div>
-        <button class="btn btn-left">&#11164</button>
+        <button class="btn btn-left">Left</button>
         <div></div>
-        <button class="btn btn-right">&#11166</button>
+        <button class="btn btn-right">Right</button>
         <div></div>
-        <button class="btn btn-down">&#11167</button>
+        <button class="btn btn-down">Down</button>
     </section>
 </body>
 
